--- a/react-18/src/index.css
+++ b/react-18/src/index.css
@@ -27,3 +27,37 @@ code {
   height: 100vh;
   z-index: 1;
 }
+
+nav{
+  background-color: #d9d9d9!important;
+}
+
+.navbar-brand{
+  color: #205387!important;
+}
+.text-color-1{
+  color: #7c7979!important;
+}
+.text-color-2{
+  color: #4d4949!important;
+}
+
+.text-color-3{
+  color: #000!important;
+}
+
+.text-1{
+  font-size: 1.5rem!important;
+  font-weight: 700!important;
+}
+
+.text-2{
+  font-size: 1rem!important;
+  font-weight: 600!important;
+}
+
+.text-3{
+  font-size: 1rem!important;
+  font-weight: 600!important;
+}
+
