--- a/react-18/src/index.css
+++ b/react-18/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -28,36 +28,102 @@ code {
   z-index: 1;
 }
 
-nav{
-  background-color: #d9d9d9!important;
+nav {
+  background-color: #d9d9d9 !important;
 }
 
-.navbar-brand{
-  color: #205387!important;
+.bg-color-1 {
+  background-color: #205387 !important;
 }
-.text-color-1{
-  color: #7c7979!important;
-}
-.text-color-2{
-  color: #4d4949!important;
+.bg-color-2 {
+  background-color: #fff !important;
 }
 
-.text-color-3{
-  color: #000!important;
+.navbar-brand {
+  color: #205387 !important;
+}
+.text-color-1 {
+  color: #7c7979 !important;
+}
+.text-color-2 {
+  color: #4d4949 !important;
 }
 
-.text-1{
-  font-size: 1.5rem!important;
-  font-weight: 700!important;
+.text-color-3 {
+  color: #000 !important;
 }
 
-.text-2{
-  font-size: 1rem!important;
-  font-weight: 600!important;
+.text-color-4 {
+  color: #ff9900 !important;
 }
 
-.text-3{
-  font-size: 1rem!important;
-  font-weight: 600!important;
+.text-color-5 {
+  color: #fff !important;
 }
 
+.text-0 {
+  font-size: 1.8rem !important;
+  font-weight: 700 !important;
+}
+
+.text-1 {
+  font-size: 1.5rem !important;
+  font-weight: 700 !important;
+}
+
+.text-2 {
+  font-size: 1.2rem !important;
+  font-weight: 600 !important;
+}
+
+.text-3 {
+  font-size: 1rem !important;
+  font-weight: 600 !important;
+}
+
+.block {
+  display: block !important;
+  width: 100% !important;
+  border: none !important;
+  background-color: #205387 !important;
+  padding: 1rem 1.5rem !important;
+  font-size: 1.2rem !important;
+  cursor: pointer;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.login-main {
+  text-align: center;
+}
+
+.login-div {
+  margin-top: 5rem;
+  text-align: center;
+  width: 40%;
+  display: inline-block;
+}
+
+.login-form {
+  padding: 5rem 2rem 5rem 2rem;
+  width: 100% !important;
+  border-radius: 1rem !important;
+  margin-bottom: 10rem;
+  box-shadow: 0px 1px 10px #000000;
+}
+
+.login-headings {
+  text-align: left !important;
+  margin-bottom: 1rem;
+}
+
+.login-label {
+  text-align: left !important;
+  float: left !important;
+}
+
+.login-input {
+  border: 0.15rem solid #d9d9d9 !important;
+  border-radius: 4px !important;
+  padding: 1rem 1.5rem !important;
+}
