--- a/react-18/src/index.css
+++ b/react-18/src/index.css
@@ -32,6 +32,10 @@ nav {
   background-color: #d9d9d9 !important;
 }
 
+.main-height-1{
+  height: 100vh!important;
+}
+
 .bg-color-1 {
   background-color: #205387 !important;
 }
